--- a/SuperHeroesApp.ComponentClassLib/SuperHeroesApp.ComponentClassLib.csproj
+++ b/SuperHeroesApp.ComponentClassLib/SuperHeroesApp.ComponentClassLib.csproj
@@ -7,8 +7,17 @@
 
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Include="wwwroot\**\*" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="SuperHeroesApp.ComponentClassLib, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>bin\Debug\netstandard2.0\SuperHeroesApp.ComponentClassLib.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 </Project>
