--- a/SuperHeroesApp.WebAssembly/SuperHeroesApp.WebAssembly.csproj
+++ b/SuperHeroesApp.WebAssembly/SuperHeroesApp.WebAssembly.csproj
@@ -14,4 +14,10 @@
     <PackageReference Include="Microsoft.AspNetCore.Blazor.DevServer" Version="3.0.0-preview9.19465.2" PrivateAssets="all" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="SuperHeroesApp.ComponentClassLib, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\SuperHeroesApp.ComponentClassLib\bin\Debug\netstandard2.0\SuperHeroesApp.ComponentClassLib.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
