--- a/SuperHeroesApp.Server/SuperHeroesApp.Server.csproj
+++ b/SuperHeroesApp.Server/SuperHeroesApp.Server.csproj
@@ -5,6 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Reference Include="Microsoft.Extensions.Hosting.Abstractions, Version=3.1.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60">
+      <HintPath>C:\Program Files\dotnet\packs\Microsoft.AspNetCore.App.Ref\3.1.0\ref\netcoreapp3.1\Microsoft.Extensions.Hosting.Abstractions.dll</HintPath>
+    </Reference>
     <Reference Include="SuperHeroesApp.ComponentClassLib, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
       <HintPath>..\SuperHeroesApp.ComponentClassLib\bin\Debug\netstandard2.0\SuperHeroesApp.ComponentClassLib.dll</HintPath>
     </Reference>
